cluster/apps/mealie/mealie/mealie.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/instance: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mealie
    spec:
      restartPolicy: Always
      containers:
        - name: mealie
          image: hkotel/mealie:v1.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mealie
  name: mealie
  namespace: mealie
spec:
  selector:
    app.kubernetes.io/instance: mealie
  ports:
    - name: http
      port: 9000
      targetPort: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`mealie.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: mealie
          namespace: mealie
          port: 9000
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
